--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "chai-spies": "^1.0.0",
     "nock": "^10.0.2",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "sinon": "^7.2.4"
   }
 }
